updating code and results in github repo

--- a/Crypto_Clustering_starter_code.ipynb
+++ b/Crypto_Clustering_starter_code.ipynb
@@ -1126,7 +1126,7 @@
     "\n",
     "**Question:** What is the best value for `k`?\n",
     "\n",
-    "**Answer:** 4"
+    "**Answer:** **4**"
    ]
   },
   {
@@ -1994,7 +1994,7 @@
     "\n",
     "**Question:** What is the total explained variance of the three principal components?\n",
     "\n",
-    "**Answer:** "
+    "**Answer:** **0.886 or approximately 89% (0.37269822+0.32489961+0.18917649 =0.886)**"
    ]
   },
   {
@@ -2408,12 +2408,12 @@
     "\n",
     "* **Question:** What is the best value for `k` when using the PCA data?\n",
     "\n",
-    "  * **Answer:**\n",
+    "  * **Answer:** **4**\n",
     "\n",
     "\n",
     "* **Question:** Does it differ from the best k value found using the original data?\n",
     "\n",
-    "  * **Answer:** "
+    "  * **Answer:** **No**"
    ]
   },
   {
@@ -3468,7 +3468,7 @@
     "\n",
     "  * **Question:** After visually analyzing the cluster analysis results, what is the impact of using fewer features to cluster the data using K-Means?\n",
     "\n",
-    "  * **Answer:** "
+    "  * **Answer: Using fewer features for clustering can simplify the process and improve the performannce as well as interpretation of K-means. The use od PCA shows the model's efficiency as well as reduce the complexity while still achieving the same results from the data** "
    ]
   }
  ],
